--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Ensiklopedia</title>
 </head>
 <body>
-    
+    <h1 class="text-center mt-40 mb-10 text-4xl"><b>SELAMAT DATANG DI ENSIKLOPEDIA</b></h1>
+    <div class="text-center">
+        <a href="" class="mr-5">Home</a>
+        <a href="" class="mr-5">About</a>
+        <a href="" class="mr-5">Topik 1</a>
+        <a href="">Topik 2</a>
+    </div>
 </body>
 </html>
