--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1 class="text-center mt-40 mb-10 text-4xl"><b>SELAMAT DATANG DI ENSIKLOPEDIA</b></h1>
     <div class="text-center">
-        <a href="" class="mr-5">Home</a>
-        <a href="" class="mr-5">About</a>
-        <a href="" class="mr-5">Topik 1</a>
+        <a href="#" class="mr-5">Home</a>
+        <a href="about.html" class="mr-5">About</a>
+        <a href="topik1/index.html" class="mr-5">Topik 1</a>
         <a href="">Topik 2</a>
     </div>
 </body>
