--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
-            <li><a href="topik1/index.html">History</a></li>
-            <li><a href="blog.html">Technology</a></li>
-            <li><a href="table.html">Food</a></li>
+            <li><a href="topik1/index.html">Industry</a></li>
+            <li><a href="blog.html">Education</a></li>
+            <li><a href="table.html">Law</a></li>
           </ul>
         </div>
     
