--- a/topik1/index.html
+++ b/topik1/index.html
@@ -52,7 +52,8 @@
           </div>
         </section>
     </a>
-    <a href="Bethalto's_Original_Village_Hall.html">
+
+    <a href="Owens_illinois_Glass_Company.html">
         <section class="mx-auto w-3/4 md:max-w-7xl mb-3 border-solid border-2 border-sky-500 mx-5 rounded-md p-2 items-center hover:bg-slate-700 group overflow-hidden md:text-2xl">
           <div class="md:flex">
             <div class="md:shrink-0 ">
@@ -66,6 +67,23 @@
           </div>
         </section>
     </a>
+
+    <a href="St_Louis_Smelting_and_Refining_Company_In_Collinsville.html">
+        <section class="mx-auto w-3/4 md:max-w-7xl mb-3 border-solid border-2 border-sky-500 mx-5 rounded-md p-2 items-center hover:bg-slate-700 group overflow-hidden md:text-2xl">
+          <div class="md:flex">
+            <div class="md:shrink-0 ">
+              <img src="src/smelting.jpg" alt="" srcset="" class="w-full h-36 rounded-md md:h-full md:w-48 object-cover">
+            </div>
+            <div class="px-3 group-hover:text-white">
+              <div class="flex items-center "><img src="" alt="" srcset="" class="w-10 h-10 rounded-full mt-2"><span class="pl-3 text-slate-400">@Cuy</span></div>
+              <div class="text-2xl first-line:uppercase first-line:tracking-widest first-letter:text-7xl first-letter:float-left first-letter:mr-3"><b><h1>St. Louis Smelting and Refining Company In Collinsville</h1></b></div>
+              <div class="text-slate-400">1 rb x dibaca</div>
+            </div>
+          </div>
+        </section>
+    </a>
+
+    <section class="mb-32"></section>
    
     
 
