--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="topik1/index.html">Industry</a></li>
-            <li><a href="blog.html">Education</a></li>
+            <li><a href="topik2/index.html">Education</a></li>
             <li><a href="table.html">Law</a></li>
           </ul>
         </div>
