--- a/topik2/index.html
+++ b/topik2/index.html
@@ -38,11 +38,11 @@
 
     <h1 class="flex text-center justify-center text-5xl mb-10">Education</h1>
 
-    <a href="Bethalto's_Original_Village_Hall.html">
+    <a href="Alton_Community_Unit_School_District.html">
         <section class="mx-auto w-3/4 md:max-w-7xl mb-3 border-solid border-2 border-sky-500 mx-5 rounded-md p-2 items-center hover:bg-slate-700 group overflow-hidden md:text-2xl">
           <div class="md:flex">
             <div class="md:shrink-0 ">
-              <img src="src/bethalto.jpg" alt="" srcset="" class="w-full h-36 rounded-md md:h-full md:w-48 object-cover">
+              <img src="src/11.jpg" alt="" srcset="" class="w-full h-36 rounded-md md:h-full md:w-48 object-cover">
             </div>
             <div class="px-3 group-hover:text-white">
               <div class="flex items-center "><img src="img/gambar.jpg" alt="" srcset="" class="w-10 h-10 rounded-full mt-2"><span class="pl-3 text-slate-400">@Cuy</span></div>
@@ -53,11 +53,11 @@
         </section>
     </a>
 
-    <a href="Owens_illinois_Glass_Company.html">
+    <a href="East_Alton_Elementary_School_District.html">
         <section class="mx-auto w-3/4 md:max-w-7xl mb-3 border-solid border-2 border-sky-500 mx-5 rounded-md p-2 items-center hover:bg-slate-700 group overflow-hidden md:text-2xl">
           <div class="md:flex">
             <div class="md:shrink-0 ">
-              <img src="src/owens.jpg" alt="" srcset="" class="w-full h-36 rounded-md md:h-full md:w-48 object-cover">
+              <img src="src/13.jpg" alt="" srcset="" class="w-full h-36 rounded-md md:h-full md:w-48 object-cover">
             </div>
             <div class="px-3 group-hover:text-white">
               <div class="flex items-center "><img src="" alt="" srcset="" class="w-10 h-10 rounded-full mt-2"><span class="pl-3 text-slate-400">@Cuy</span></div>
@@ -68,11 +68,11 @@
         </section>
     </a>
 
-    <a href="St_Louis_Smelting_and_Refining_Company_In_Collinsville.html">
+    <a href="Granite_City_Community_Unit_School_District.html">
         <section class="mx-auto w-3/4 md:max-w-7xl mb-3 border-solid border-2 border-sky-500 mx-5 rounded-md p-2 items-center hover:bg-slate-700 group overflow-hidden md:text-2xl">
           <div class="md:flex">
             <div class="md:shrink-0 ">
-              <img src="src/smelting.jpg" alt="" srcset="" class="w-full h-36 rounded-md md:h-full md:w-48 object-cover">
+              <img src="src/9.jpg" alt="" srcset="" class="w-full h-36 rounded-md md:h-full md:w-48 object-cover">
             </div>
             <div class="px-3 group-hover:text-white">
               <div class="flex items-center "><img src="" alt="" srcset="" class="w-10 h-10 rounded-full mt-2"><span class="pl-3 text-slate-400">@Cuy</span></div>
