--- a/topik2/East_Alton_Elementary_School_District.html
+++ b/topik2/East_Alton_Elementary_School_District.html
@@ -37,33 +37,29 @@
     <section class="h-40"></section>
 
    <section class="m-20">
-    <h1 class="flex justify-center text-3xl"><b>Bethalto's Original Village Hall</b></h1>
-    <img src="src/Bethalto_Large.jpg" alt="" class="flex mx-auto mt-5 bethalto">
+    <h1 class="flex justify-center text-3xl"><b>East Alton Elementary School District #13</b></h1>
+    <img src="src/13_Large.jpg" alt="" class="flex mx-auto mt-5 bethalto">
     <div>
         <p class="mt-5">
-            <i>The Alton Community Unit School District #11 was consolidated and renumerated in 1952.</i>
+            <i>The East Alton Elementary School District #13 was consolidated and renumerated in 1956.</i>
             <br>
-            The Superintendent of Alton Community Unit School District #11 in 1952 was Dr. J.B. Johnson. Members of its Board of Education were:
+            The Superintendent of East Alton Elementary School District #13 in 1956 was Charles T. Gabbert. Members of its Board of Education were:
             <br>
-            <mark>Dr. Robert B. Lynn</mark>
+            <mark>Rhea G. Vroman</mark>
             <br>
-            <mark>George L. Davis</mark>
+            <mark>Birdine Groshong</mark>
             <br>
-            <mark>Robert L. Goulding</mark>
+            <mark>Emory Walkington</mark>
             <br>
-            <mark>Charles R. Freeman</mark>
+            <mark>Richard Welch</mark>
             <br>
-            <mark>Dr. Charles J. Hemphill</mark>
+            <mark>Rafael Marderosian</mark>
             <br>
-            <mark>E.P. Waterhouse</mark>
+            <mark>Orval C. Lay</mark>
             <br>
-            <mark>Jerry Middleton</mark>
-            <br>
-            <u>Today, the Alton Community Unit School District #11 is comprised of the following schools: </u> Alton High School, Alton Middle School, East Elementary School, North Elementary School, West Elementary School, Lovejoy Elementary School, Lewis and Clark Elementary School, Gibson Brown Elementary School, Eunice Smith Elementary School, Early Childhood Center, and the Motivational Achievement Center.
-            <br>
+            <u>Today, the East Alton Elementary School District #13 is comprised of the following schools: East Alton Middle School, Eastwood Elementary School, and the Washington Early Childhood Center.</u>
             
-            The Alton Community Unit School District #11 provides education to the following areas of Madison County:
-        </p>
+            The East Alton Elementary School District #13 provides education to the following areas of Madison County:        </p>
     </div>
    </section>
     
