--- a/topik2/Granite_City_Community_Unit_School_District.html
+++ b/topik2/Granite_City_Community_Unit_School_District.html
@@ -37,8 +37,8 @@
     <section class="h-40"></section>
 
    <section class="m-20">
-    <h1 class="flex justify-center text-3xl"><b>Bethalto's Original Village Hall</b></h1>
-    <img src="src/Bethalto_Large.jpg" alt="" class="flex mx-auto mt-5 bethalto">
+    <h1 class="flex justify-center text-3xl"><b>Granite City Community Unit School District #9</b></h1>
+    <img src="src/9_large.jpg" alt="" class="flex mx-auto mt-5 bethalto">
     <div>
         <p class="mt-5">
             <i>The Alton Community Unit School District #11 was consolidated and renumerated in 1952.</i>
