--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
               <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
-                <li><a href="history.html">Industry</a></li>
-                <li><a href="blog.html">Education</a></li>
-                <li><a href="blog.html">Law</a></li>
+                <li><a href="topik1/index.html">Industry</a></li>
+                <li><a href="topik2/index.html">Education</a></li>
+                <li><a href="topik3/index.html">Law</a></li>
               </ul>
             </div>
         
