--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="about.html">About Me</a></li>
             <li><a href="topik1/index.html">Industry</a></li>
             <li><a href="topik2/index.html">Education</a></li>
-            <li><a href="table.html">Law</a></li>
+            <li><a href="topik3/index.html">Law</a></li>
           </ul>
         </div>
     
