--- a/topik1/Owens_illinois_Glass_Company.html
+++ b/topik1/Owens_illinois_Glass_Company.html
@@ -19,7 +19,7 @@
           <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="../about.html">About Me</a></li>
-            <li><a href="">Industry</a></li>
+            <li><a href="../topik1/index.html">Industry</a></li>
             <li><a href="../topik2/index.html">Education</a></li>
             <li><a href="../topik3/index.html">Law</a></li>
           </ul>
