--- a/topik1/index.html
+++ b/topik1/index.html
@@ -45,7 +45,7 @@
               <img src="src/bethalto.jpg" alt="" srcset="" class="w-full h-36 rounded-md md:h-full md:w-48 object-cover">
             </div>
             <div class="px-3 group-hover:text-white">
-              <div class="flex items-center "><img src="img/gambar.jpg" alt="" srcset="" class="w-10 h-10 rounded-full mt-2"><span class="pl-3 text-slate-400">@Cuy</span></div>
+              <div class="flex items-center "><img src="../src/gambar.jpg" alt="" srcset="" class="w-10 h-10 rounded-full mt-2"><span class="pl-3 text-slate-400">@Cuy</span></div>
               <div class="text-2xl first-line:uppercase first-line:tracking-widest first-letter:text-7xl first-letter:float-left first-letter:mr-3"><b><h1>Bethalto's Original Village Hall</h1></b></div>
               <div class="text-slate-400">1 rb x dibaca</div>
             </div>
@@ -60,7 +60,7 @@
               <img src="src/owens.jpg" alt="" srcset="" class="w-full h-36 rounded-md md:h-full md:w-48 object-cover">
             </div>
             <div class="px-3 group-hover:text-white">
-              <div class="flex items-center "><img src="" alt="" srcset="" class="w-10 h-10 rounded-full mt-2"><span class="pl-3 text-slate-400">@Cuy</span></div>
+              <div class="flex items-center "><img src="../src/gambar.jpg" alt="" srcset="" class="w-10 h-10 rounded-full mt-2"><span class="pl-3 text-slate-400">@Cuy</span></div>
               <div class="text-2xl first-line:uppercase first-line:tracking-widest first-letter:text-7xl first-letter:float-left first-letter:mr-3"><b><h1>Owens-illinois Glass Company</h1></b></div>
               <div class="text-slate-400">1 rb x dibaca</div>
             </div>
@@ -75,7 +75,7 @@
               <img src="src/smelting.jpg" alt="" srcset="" class="w-full h-36 rounded-md md:h-full md:w-48 object-cover">
             </div>
             <div class="px-3 group-hover:text-white">
-              <div class="flex items-center "><img src="" alt="" srcset="" class="w-10 h-10 rounded-full mt-2"><span class="pl-3 text-slate-400">@Cuy</span></div>
+              <div class="flex items-center "><img src="../src/gambar.jpg" alt="" srcset="" class="w-10 h-10 rounded-full mt-2"><span class="pl-3 text-slate-400">@Cuy</span></div>
               <div class="text-2xl first-line:uppercase first-line:tracking-widest first-letter:text-7xl first-letter:float-left first-letter:mr-3"><b><h1>St. Louis Smelting and Refining Company In Collinsville</h1></b></div>
               <div class="text-slate-400">1 rb x dibaca</div>
             </div>
